# InnoTodo-Statistics

./: .env.sample  README.md  app.Dockerfile  docker-compose.yml  kafka_client.py  kafka_consumer.Dockerfile  main.py  pyproject.toml
app/: config.py  db.py  models.py  schemas.py  services.py
kubernetes/: kafka-consumer.yaml  mongo-pv.yaml  mongo-pvc.yaml  mongo.yaml  statistics-app.yaml  stats-config.yaml
