[tool.poetry]
name = "inno-todo-stats"
version = "0.1.0"
description = ""
authors = ["FadingFog <fadingfog@github.com>"]
readme = "README.md"
packages = [{include = "inno_todo_stats"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
motor = "^3.1.1"
beanie = "^1.17.0"
python-dotenv = "^1.0.0"
aiokafka = "^0.8.0"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
